--- a/generic.html
+++ b/generic.html
@@ -54,46 +54,45 @@
 					<section class="posts">
 						<article>
 							<header>
-								<h2><a href="#">Sed magna<br />
-								ipsum faucibus</a></h2>
+								<h2>Doing More With<br/>
+								Google Sheets</h2>
 							</header>
-							<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="https://coursera.org/verify/4TKNHWS49K8F" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera 4TKNHWS49K8F.jpg" alt="Blurred image" /></a>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button" target="_blank">View Project</a></li>
+								<li><a href="https://drive.google.com/file/d/1C6MGQ4vC6RzN_45Peawh5zkIX1TySkXh/view?usp=sharing" class="button" target="_blank">View Certificate</a></li>
 							</ul>
 						</article>
 						<article>
 							<header>
-								<h2><a href="#">Primis eget<br />
-								imperdiet lorem</a></h2>
+								<h2>Getting Started With<br/>
+								Python</h2>
 							</header>
-							<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="https://coursera.org/verify/JSCFPQGZ6WYJ" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera JSCFPQGZ6WYJ.jpg" alt="Blurred image" /></a>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">Full Story</a></li>
+								<li><a href="https://drive.google.com/file/d/11IH_dylstaVao-Fu7Pux68mGZdV4jWvP/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
 						</article>
 						<article>
 							<header>
-								<h2><a href="#">Ante mattis<br />
-								interdum dolor</a></h2>
+								<h2>Python Data structures</h2>
 							</header>
-							<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="https://coursera.org/verify/WYZVL3L6MW4C" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera WYZVL3L6MW4C.jpg" alt="Blurred image" /></a>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">Full Story</a></li>
+								<li><a href="https://drive.google.com/file/d/1R93JZPkVXM43alYT-CYe_CK6eg1Ai-8J/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
 						</article>
 						<article>
 							<header>
-								<h2><a href="#">Tempus sed<br />
-								nulla imperdiet</a></h2>
+								<h2>Introduction to <br/>
+									data science</h2>
 							</header>
-							<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="https://skillsforall.com/profile?&tab=badges" target="_blank" class="image fit"><img style="filter: blur(4.5px);" src="images/introduction-to-data-science.png" alt="Blurred image" /></a>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">Full Story</a></li>
+								<li><a href="https://drive.google.com/file/d/1FX9tsQAB3BSi_WlFk6aooodHxOveo8ci/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
 						</article>
 					</section>
