--- a/generic.html
+++ b/generic.html
@@ -57,8 +57,8 @@
 								<h2>Doing More With<br/>
 								Google Sheets</h2>
 							</header>
-							<a href="https://coursera.org/verify/4TKNHWS49K8F" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera 4TKNHWS49K8F.jpg" alt="Blurred image" /></a>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+							<a href="https://coursera.org/verify/4TKNHWS49K8F" target="_blank" class="image fit"><img style="filter: blur(3.25px);" src="images/Coursera 4TKNHWS49K8F.jpg" alt="Blurred image" /></a>
+							<p>An online non-credit course authorized by Google Cloud and offered through Coursera. </p>
 							<ul class="actions special">
 								<li><a href="https://drive.google.com/file/d/1C6MGQ4vC6RzN_45Peawh5zkIX1TySkXh/view?usp=sharing" class="button" target="_blank">View Certificate</a></li>
 							</ul>
@@ -68,8 +68,8 @@
 								<h2>Getting Started With<br/>
 								Python</h2>
 							</header>
-							<a href="https://coursera.org/verify/JSCFPQGZ6WYJ" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera JSCFPQGZ6WYJ.jpg" alt="Blurred image" /></a>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+							<a href="https://coursera.org/verify/JSCFPQGZ6WYJ" target="_blank" class="image fit"><img style="filter: blur(3.25px);" src="images/Coursera JSCFPQGZ6WYJ.jpg" alt="Blurred image" /></a>
+							<p>An online non-credit course authorized by University of Michigan and offered through Coursera. </p>
 							<ul class="actions special">
 								<li><a href="https://drive.google.com/file/d/11IH_dylstaVao-Fu7Pux68mGZdV4jWvP/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
@@ -78,8 +78,8 @@
 							<header>
 								<h2>Python Data structures</h2>
 							</header>
-							<a href="https://coursera.org/verify/WYZVL3L6MW4C" target="_blank" class="image fit"><img style="filter: blur(1.75px);" src="images/Coursera WYZVL3L6MW4C.jpg" alt="Blurred image" /></a>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+							<a href="https://coursera.org/verify/WYZVL3L6MW4C" target="_blank" class="image fit"><img style="filter: blur(3.25px);" src="images/Coursera WYZVL3L6MW4C.jpg" alt="Blurred image" /></a>
+							<p>Python Data Structures is an online non-credit course authorized by University of Michigan and offered through Coursera.</p>
 							<ul class="actions special">
 								<li><a href="https://drive.google.com/file/d/1R93JZPkVXM43alYT-CYe_CK6eg1Ai-8J/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
@@ -90,7 +90,7 @@
 									data science</h2>
 							</header>
 							<a href="https://skillsforall.com/profile?&tab=badges" target="_blank" class="image fit"><img style="filter: blur(4.5px);" src="images/introduction-to-data-science.png" alt="Blurred image" /></a>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+							<p>Achievement of student level credential for completing Introduction to Data Science course  offered by Cisco through the Skills for All program.</p>
 							<ul class="actions special">
 								<li><a href="https://drive.google.com/file/d/1FX9tsQAB3BSi_WlFk6aooodHxOveo8ci/view?usp=sharing" target="_blank" class="button">View Certificate</a></li>
 							</ul>
