--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 								<header class="major">
 									<h2><a href="https://github.com/Labwoski2321/pRODUCT-REVIEW-DETECTION" target="_blank">Fake Review Detection using<br />
 									Machine Learning</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>A Machine Learning project that will detect a Fake Reviews from some e-commerce websites.<br/>
+									A corpus of Amazon Dataset are used for training and testing. Both BernoulliNB and SVM<br/>
+									 algorithms are used for classification.</p>
 								</header>
 								<a href="https://github.com/Labwoski2321/pRODUCT-REVIEW-DETECTION" target="_blank" class="image main"><img src="images/assets.aboutamazon.jpg" alt="machine learning ad" /></a>
 								<ul class="actions special">
@@ -66,9 +66,9 @@
 								<header class="major">
 									<h2><a href="https://github.com/Labwoski2321/Smart-Farm" target="_blank">Live Irrigation Notification<br />
 									System</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>This IoT based project use a microcontroller unit called NodeMCU ESP32,<br />
+									that helps in receiving and transferring moisture sensor values to the user interface.<br />
+								The decrease of the sensory values after a fixed point will alert the client/end-user.</p>
 								</header>
 								<a href="https://github.com/Labwoski2321/Smart-Farm" target="_blank" class="image main"><img src="images/1 cZxcsnftg4m6e4klOQDzIA.png" alt="" /></a>
 								<ul class="actions special">
